--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,35 @@
     box-sizing: border-box;
 }
 
+/* Dark mode - Início ---------------------------------------------------------------------*/
+.btn-bk {
+    font-size: 1.5rem;
+    text-indent: 0.5rem;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 2rem;
+  }
+  
+  input:checked {
+    background-color:#2c2f33 !important;
+    border-bottom-color: #2c2f33 !important;
+    border-color:#ffffff !important;
+  
+  
+  }
+  input {
+    background-color:#ffffff !important;
+    border-bottom-color: #ffffff !important;
+    border-color:#2c2f33 !important;
+  
+  }
+  
+  input[type="checkbox"]:focus {
+    box-shadow: none;
+  }
+ /* Dark mode - Fim---------------------------------------------------------------------------------------*/
+
 body {
     font-family: "Roboto", sans-serif;
 }
