--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 .modal-delete-todo {
     
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: absolute;
     z-index: 5;
     top: 0;
@@ -23,6 +23,7 @@
     display: none;
     align-items: center;
     justify-content: center;
+    
     
 }
 
@@ -151,6 +152,7 @@ header {
     border-radius: 0.75rem;
 }
 
+
 .filter-btn {
     height: 2rem;
     padding-inline: 0.7rem;
@@ -237,10 +239,14 @@ header {
     border-radius: 50%;
     height: 1.875rem;
     width: 1.875rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .section-add-todo .add-task button i {
-    font-size: 1.8em;
+    font-size: 0.75em;
+    
 }
 
 /* Local onde as task ficam */
