--- a/css/style_.css
+++ b/css/style_.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 :root {
-  --primary-color: #222222;
-  --background-color: #ffffff;
+  --primary-color: #22222200;
+  --background-color: #ffffff00;
 }
 
 * {
@@ -17,7 +17,7 @@ html {
 
 body {
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +26,7 @@ body {
 
 #main-container {
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   width: 100%;
   max-width: 500px;
   height: 100vh;
@@ -38,7 +38,7 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: arken(var(--background-color));
   z-index: 1;
   top: 0;
   right: 0;
@@ -60,7 +60,7 @@ body {
   border: solid 1px var(--primary-color);
   border-radius: 1rem;
   background-color: var(--primary-color);
-  color: #ffffff;
+  color: var(--background-color);
   height: 2rem;
   min-width: 5rem;
   padding: 0 1rem;
@@ -69,35 +69,51 @@ body {
 }
 
 .container-sim-nao button:hover {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: var(--primary-color);
   transform: scale(1.05);
 }
 
 .container-sim-nao button:first-child:hover {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: #ff3737;
   border: solid 1px #ff3737;
   transform: scale(1.05);
 }
 
+/* ESTILIZAÇÃO CARD CONFIRMAÇÃO DE EXCLUSÃO */
 /* Dark mode - Início ---------------------------------------------------------------------*/
-.btn-bk.form-check.form-switch {
-  transition: all 1s ease;
-  cursor: pointer;
-}
-
-#theme-icons .material-icons {
-  display: flex;
-  transition: all 1s ease;
-  cursor: pointer;
-}
-
-input[type="checkbox"]#handleTheme {
+/* .btn-bk {
+    font-size: 1rem;
+    text-indent: 0.5rem;
+    align-items: center;
+    justify-content: center;
+} */
+input[type="checkbox"]#flexSwitchCheckDefault {
   display: none;
 }
 
-/* Dark mode - Fim---------------------------------------------------------------*/
+.material-icons.dark {
+  display: flex;
+}
+
+.material-icons.light {
+  display: none;
+}
+
+input:checked {
+  background-color: var(--primary-color) !important;
+  border-bottom-color: var(--primary-color) !important;
+  border-color: var(--background-color) !important;
+}
+
+input {
+  background-color: var(--background-color) !important;
+  border-bottom-color: var(--background-color) !important;
+  border-color: var(--primary-color) !important;
+}
+
+/* Dark mode - Fim---------------------------------------------------------------------------------------*/
 button, a, select {
   cursor: pointer;
   border: 0;
@@ -110,7 +126,7 @@ a:visited {
 }
 
 input, textarea, select {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: var(--primary-color);
 }
 
@@ -188,7 +204,7 @@ header {
   transform-origin: center right;
   transition: width 0.3s ease-in-out;
   border: solid 1px var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
 }
 
 .search-input.active {
@@ -203,12 +219,12 @@ header {
   border-radius: 2rem;
   margin-left: 0.25rem;
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   border: solid 1px var(--primary-color);
 }
 
 .filter-btn {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: solid 1px var(--primary-color);
 }
 
@@ -220,7 +236,7 @@ header {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   border-top: solid 1px var(--primary-color);
   padding: .5rem 1rem;
 }
@@ -284,7 +300,7 @@ header {
   position: absolute;
   right: 0.86rem;
   bottom: .75rem;
-  color: #ffffff;
+  color: var(--background-color);
   background-color: var(--primary-color);
   border-radius: 50%;
   height: 1.875rem;
@@ -386,7 +402,7 @@ header {
   width: 100%;
   max-width: 500px;
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -409,21 +425,21 @@ header {
 }
 
 .api-card {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   padding: 1.5rem;
   margin: 1rem 2rem;
   border-radius: .5rem;
 }
 
 .api-card > h2 {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   padding: 5px;
   border-radius: 1rem;
   display: inline-block;
 }
 
 footer {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   width: 100%;
   padding: 1.5rem;
   text-align: center;
@@ -437,7 +453,7 @@ footer > a {
   background: linear-gradient(130deg, rgba(251, 251, 254, 0.9), rgba(251, 251, 254, 0.2));
   padding: .75rem 1.5rem;
   border-radius: .5rem;
-  color: var(--primary-color);
+  color: var(--title-color);
   font-weight: 500;
   transition: .4s;
 }
