--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
@@ -17,7 +17,7 @@ html {
 
 body {
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,19 +26,18 @@ body {
 
 #main-container {
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   width: 100%;
   max-width: 500px;
   height: 100vh;
-  transition: all 0.25s ease;
+  transition: all .25s ease;
 }
 
-/* ESTILIZAÇÃO CARD CONFIRMAÇÃO DE EXCLUSÃO */
 .modal-delete-todo {
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: #ffffff90;
   z-index: 1;
   top: 0;
   right: 0;
@@ -60,36 +59,35 @@ body {
   border: solid 1px var(--primary-color);
   border-radius: 1rem;
   background-color: var(--primary-color);
-  color: #ffffff;
+  color: var(--background-color);
   height: 2rem;
   min-width: 5rem;
   padding: 0 1rem;
   margin: 0.5rem;
-  transition: all 0.25s ease;
+  transition: all .25s ease;
 }
 
 .container-sim-nao button:hover {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: var(--primary-color);
   transform: scale(1.05);
 }
 
 .container-sim-nao button:first-child:hover {
-  background-color: #ffffff;
-  color: #ff3737;
-  border: solid 1px #ff3737;
+  background-color: var(--background-color);
+  color: #ff5050;
+  border: solid 1px #ff5050;
   transform: scale(1.05);
 }
 
 /* Dark mode - Início ---------------------------------------------------------------------*/
 .btn-bk.form-check.form-switch {
-  transition: all 1s ease;
   cursor: pointer;
 }
 
 #theme-icons .material-icons {
   display: flex;
-  transition: all 1s ease;
+  transition: all .25s ease;
   cursor: pointer;
 }
 
@@ -110,11 +108,10 @@ a:visited {
 }
 
 input, textarea, select {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: var(--primary-color);
 }
 
-/* Header */
 header {
   width: 100%;
   max-width: 500px;
@@ -134,18 +131,11 @@ header {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  flex: 1 1 100%;
   text-align: center;
-  margin-bottom: -.5rem;
+  cursor: pointer;
 }
 
-.title img {
-  height: 1rem;
-  margin-right: .25rem;
-  margin-top: -.4rem;
-}
-
-.title h1, a {
+.title h1 {
   text-decoration: none;
   font-size: 1.5rem;
 }
@@ -186,9 +176,9 @@ header {
   width: 2rem;
   border-radius: 5rem;
   transform-origin: center right;
-  transition: width 0.3s ease-in-out;
+  transition: width .25s ease-in-out;
   border: solid 1px var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
 }
 
 .search-input.active {
@@ -203,12 +193,12 @@ header {
   border-radius: 2rem;
   margin-left: 0.25rem;
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   border: solid 1px var(--primary-color);
 }
 
 .filter-btn {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   color: solid 1px var(--primary-color);
 }
 
@@ -220,7 +210,7 @@ header {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   border-top: solid 1px var(--primary-color);
   padding: .5rem 1rem;
 }
@@ -232,7 +222,7 @@ header {
   justify-content: space-between;
   height: 0;
   overflow: hidden;
-  transition: height 0.25s ease;
+  transition: height .25s ease;
 }
 
 .section-add-todo .extras.active {
@@ -284,7 +274,7 @@ header {
   position: absolute;
   right: 0.86rem;
   bottom: .75rem;
-  color: #ffffff;
+  color: var(--background-color);
   background-color: var(--primary-color);
   border-radius: 50%;
   height: 1.875rem;
@@ -309,17 +299,15 @@ header {
 /* Task cards */
 .task {
   border-radius: 0.75rem;
-  /* border: solid 1px var(--primary-color); */
   padding: 0 1rem 0 .5rem;
-  margin-bottom: 2rem;
   word-break: break-word;
   position: relative;
   /* background-color: var(--background-color); */
-  transition: all .5s ease;
+  transition: all .25s ease;
 }
 
 .task:last-child {
-  margin-bottom: 1.5rem;
+  margin-bottom: 2.2rem;
 }
 
 .task .title-task {
@@ -333,7 +321,7 @@ header {
 
 .tachado p {
   text-decoration: line-through;
-  color: #00000030;
+  opacity: .5;
 }
 
 .task .check {
@@ -365,18 +353,71 @@ header {
   justify-content: flex-end;
   align-items: center;
   padding: 0 1rem 0;
-  /* margin-top: -2rem; */
   transition: all .25s ease;
 }
 
 .task .options .id-task {
   /* margin-right: auto; */
-  margin-right: .5rem;
+  margin-right: 1rem;
   opacity: .3;
 }
 
 .task:hover .options {
   opacity: 1;
+}
+
+.task .options button span {
+  background-color: var(--background-color);
+  color: var(--primary-color);
+  transition: transform .25s ease;
+}
+
+.task .options button span:hover {
+  transform: scale(1.3);
+}
+
+.task .options .delete-button {
+  background-color: var(--background-color);
+  font-size: 1.5rem;
+}
+
+.task-color {
+  height: 1rem;
+  width: 1rem;
+  border-radius: 1rem;
+  margin-right: .5rem;
+  cursor: pointer;
+  transition: transform .25s ease;
+}
+
+.task-color:hover {
+  transform: scale(1.2);
+}
+
+.task-color.green {
+  background-color: #108a00;
+}
+
+.task-color.blue {
+  background-color: #1353ca;
+}
+
+.task-color.red {
+  background-color: #ff5050;
+}
+
+.task-color.clear {
+  border: solid 1px var(--primary-color);
+  margin-right: 1rem;
+}
+
+.fas.fa-trash-alt {
+  color: var(--primary-color);
+  transition: all .25s ease;
+}
+
+.fas.fa-trash-alt:hover {
+  transform: rotate(5deg) scale(1.2);
 }
 
 /* Menu Superior */
@@ -386,7 +427,7 @@ header {
   width: 100%;
   max-width: 500px;
   color: var(--primary-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -409,21 +450,21 @@ header {
 }
 
 .api-card {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   padding: 1.5rem;
   margin: 1rem 2rem;
   border-radius: .5rem;
 }
 
 .api-card > h2 {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   padding: 5px;
   border-radius: 1rem;
   display: inline-block;
 }
 
 footer {
-  background-color: #ffffff;
+  background-color: var(--background-color);
   width: 100%;
   padding: 1.5rem;
   text-align: center;
@@ -439,7 +480,7 @@ footer > a {
   border-radius: .5rem;
   color: var(--primary-color);
   font-weight: 500;
-  transition: .4s;
+  transition: .25s;
 }
 
 footer > a:hover {
