--- a/css/style.css
+++ b/css/style.css
@@ -264,9 +264,10 @@ header {
   align-items: center;
   width: 100%;
   outline: none;
+  resize: none;
+  border: 1px solid var(--primary-color);
   padding: .5rem .5rem .5rem 1rem;
   border-radius: 2rem;
-  resize: auto;
   line-height: 1.3rem;
   color: var(--primary-color);
 }
