--- a/css/style.scss
+++ b/css/style.scss
@@ -280,15 +280,16 @@ header {
     align-items: center;
     width: 100%;
     outline: none;
+    resize: none;
+    border: 1px solid var(--primary-color);
     padding: .5rem .5rem .5rem 1rem;
     border-radius: 2rem;
-    resize: auto;
     line-height: 1.3rem;
     color: var(--primary-color);
-}
 
-.section-add-todo .add-task textarea:focus {
-    box-shadow: 0 0 0 1px rgb(0, 217, 255);
+    &:focus {
+        box-shadow: 0 0 0 1px rgb(0, 217, 255);
+    }
 }
 
 .section-add-todo .add-task button {
